# aitrios-edge-device-sensor

./: .clang-format  .gitignore  .snippetscanning  README.md  meson.build  meson_options.txt
.devcontainer/: README.md
.devcontainer/raspi/: Dockerfile  devcontainer.json
.devcontainer/ubuntu/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-rpi.yml  main.yml
docs/: build.md
script/: install-senscord-rpicam-imx500.sh  mk-deb.sh
src/: meson.build
src/esf/: meson.build
src/esf/dependency/memory_manager/include/: memory_manager.h
src/esf/dependency/parameter_storage_manager/include/: parameter_storage_manager.h  parameter_storage_manager_common.h
src/esf/dependency/utility_log/include/: utility_log.h  utility_log_module_id.h
src/esf/senscord_component_inference/: meson.build
src/esf/senscord_component_inference/include/senscord/inference_stream/c_api/: property_c_types.h
src/esf/sensor_ai_lib/: meson.build
src/esf/sensor_ai_lib/include/sensor_ai_lib/: sensor_ai_lib_fwupdate.h  sensor_ai_lib_result_code.h  sensor_ai_lib_state.h
src/esf/sensor_ai_lib/src/: meson.build  sensor_ai_lib_state.c  sensor_ai_lib_state.h
src/esf/sensor_fw_update_lib/: meson.build
src/esf/sensor_fw_update_lib/include/: sensor_fw_update_lib.h
src/esf/sensor_fw_update_lib/src/: meson.build  sensor_fw_update_lib.c  sensor_fw_update_lib_impl.h  sensor_fw_update_lib_log.h
src/esf/sensor_fw_update_lib/src/common/: meson.build  sensor_fw_update_lib_common.c  sensor_fw_update_lib_common.h
src/esf/sensor_fw_update_lib/src/imx500/: meson.build  sensor_fw_update_lib_imx500.c  sensor_fw_update_lib_imx500.h
src/esf/sensor_fw_update_lib/src/raspberry_pi/: meson.build  sensor_fw_update_lib_impl.c
src/esf/sensor_main/: meson.build
src/esf/sensor_main/include/: sensor_main.h
src/esf/sensor_main/src/: meson.build  sensor_main.c  sensor_main_impl.h
src/esf/sensor_main/src/raspberry_pi/: meson.build  sensor_main_impl.c
subprojects/: gtest.wrap  senscord-rpicam-imx500.wrap  senscord.wrap  unity.wrap  wasm-micro-runtime.wrap  wasm-micro-runtime_v1_3_1.wrap
subprojects-custom/senscord/: meson.build
subprojects-custom/senscord-rpicam-imx500/: meson.build
subprojects-custom/wasm-micro-runtime/: meson.build
subprojects-custom/wasm_v1_3_1/: meson.build
subprojects/packagefiles/wasm-micro-runtime/: CMakeLists.txt
