option('target', type: 'string', value: 'raspi')
option('test_build', type: 'boolean', value: false)
option('test_build_rpi', type: 'boolean', value: false)
option('test_build_t4r', type: 'boolean', value: false)
option('senscord_core_build', type: 'boolean', value: false)
option('senscord_component_build', type: 'boolean', value: false)
option('senscord_core_t4r_build', type: 'boolean', value: false)
option('senscord_component_t4r_build', type: 'boolean', value: false)
option('link_jpeg_lib', type: 'boolean', value: false)
option('link_exif_lib', type: 'boolean', value: false)
option('build_variant_imx500_es', type: 'boolean', value: false)

