edc_sensor_main_impl_includes_internal = []
edc_sensor_main_impl_sources = files([])
senscord_includes_public += include_directories('include')
senscord_includes_public += include_directories('.')
subdir('src')

senscord_includes_internal += edc_sensor_main_impl_includes_internal
senscord_sources_main += edc_sensor_main_impl_sources
