cmake_minimum_required(VERSION 3.10)
project(wamr)

set (WAMR_BUILD_PLATFORM "linux")
set (WAMR_BUILD_INTERP 1)
set (WAMR_BUILD_FAST_INTERP 1)
set (WAMR_BUILD_AOT 1)
set (WAMR_BUILD_LIBC_BUILTIN 1)
set (WAMR_BUILD_LIBC_WASI 1)
set (WAMR_ROOT_DIR .)
set (WAMR_BUILD_LIB_WASI_THREADS 1)
set (WAMR_BUILD_THREAD_MGR 1)
set (WAMR_BUILD_SHARED_MEMORY 1)

include (${WAMR_ROOT_DIR}/build-scripts/runtime_lib.cmake)
add_library(vmlib STATIC ${WAMR_RUNTIME_LIB_SOURCE})
