
senscord_config_h.set('CONFIG_SENSOR_FW_UPDATE_LIB_AI_MODEL_DIRECTORY', '"/opt/senscord/share/imx500-models/"')
senscord_config_h.set('CONFIG_SENSOR_FW_UPDATE_LIB_AI_MODEL_JSON_DIRECTORY', '"/opt/senscord/share/rpi-camera-assets/"')
senscord_config_h.set('CONFIG_SENSOR_FW_UPDATE_LIB_AI_MODEL_TMP_DIRECTORY', '"/tmp/sensor_fw_update_lib/"')
senscord_config_h.set('CONFIG_SENSOR_FW_UPDATE_LIB_FPK2RPK_EXECUTABLE_PATH', '"/usr/bin/fpk2rpk"')
edc_sensor_fw_update_lib_impl_sources += files([
  'sensor_fw_update_lib_impl.c',
])
